# pyapm

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
files/: Aircraft.json  Prandtl-D2.json  Prandtl-D2_split.json  Test_Simple_Wing_2.json  Test_Wing_1.json  Test_outboard_dihedral.json  Test_straight.json  Test_straight_naca_2412.json  Test_straight_stability.json  Test_twist_sweep_taper.json  Tiny_Wing.json  Tiny_Wing_Blunt.json
outputs/: outputs.md
pyapm/: __init__.py  __main__.py
pyapm/classes/: __init__.py  boundedge.py  dirichletpoly.py  edge.py  edgecalculator.py  grid.py  horseshoe.py  horseshoedoublet.py  (+24 more)
results/: results.md
scripts/: aircraft.py  airfoil_poly_fit.py  airfoil_poly_fit_2.py  airfoil_script.py  compare_spacings.py  delaunay_script.py  dirichlet_poly_script.py  hsd_script.py  hsv_script.py  outboard_dihedral_script.py  poly_script.py  prandtl-d2_compare_script.py  prandtl-d2_roll_script.py  prandtl-d2_script.py  prandtl-d2_split_script.py  pressures_script.py  simple_wing_1_script.py  simple_wing_2_ctrls_script.py  simple_wing_2_script.py  spline_airfoil_script.py  straight_script.py  test_airfoil.py  test_delaunay.py  test_dirichlet_poly.py  test_hsd.py  test_hsv.py  test_outboard_dihedral.py  test_poly.py  test_prandtl-d2.py  test_prandtl-d2_compare.py  test_prandtl-d2_far_field.py  test_prandtl-d2_roll.py  test_prandtl-d2_split.py  test_prandtl-d2_strips.py  test_pressures.py  test_simple_wing_1.py  test_simple_wing_2.py  test_simple_wing_2_ctrls.py  test_spline_airfoil.py  test_straight.py  (+10 more)
(+78 files in other folders)
