[project]
name = "pyapm"
version = "0.0.3"
authors = [
  { name="Xero64", email="xero64@gmail.com" },
]
description = "Aerodynamic Panel Method in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "matplotlib>=3.10.5",
    "numexpr>=2.11.0",
    "py2md>=0.1.3",
    "pygeom>=0.0.13",
    "scipy>=1.15.3",
]

[project.urls]
Homepage = "https://github.com/Xero64/pyapm"
Issues = "https://github.com/Xero64/pyapm/issues"

[project.scripts]
pyapm = "pyapm.__main__:main"
